# caprinosol-skill-cognitive-html-effectiveness

./: .gitignore  README.md  SKILL.md
skills/cognitive-html-effectiveness/: SKILL.md  catalog-summary.md  manifest-schema.json  pyproject.toml
skills/cognitive-html-effectiveness/assets/: design-tokens.css
skills/cognitive-html-effectiveness/references/: components.md  decision-tree.md  palette-override.md  quality-checklist.md
skills/cognitive-html-effectiveness/references/patterns/: comparison.md  deck.md  design-system.md  diagram.md  editor.md  explainer.md  prototyping.md  report.md  review.md  walkthrough.md
skills/cognitive-html-effectiveness/scripts/: generate.py
skills/cognitive-html-effectiveness/templates/: base.html
skills/cognitive-html-effectiveness/templates/components/: action-item.html  action-items.html  callout.html  chip-item.html  chips.html  code-panel-line.html  code-panel.html  collapsible.html  data-table-accordion-field.html  data-table-accordion-row.html  data-table-cell.html  data-table-header.html  data-table-row.html  data-table.html  decision-card.html  decision-option.html  faq-item.html  faq.html  progress-bar.html  sidebar-nav-file.html  sidebar-nav-link.html  sidebar-nav.html  summary-band-item.html  summary-band.html  tab-button.html  tab-pane.html  tabs.html  timeline-entry.html  timeline.html  tldr-box.html  tradeoff-table-row.html  (+1 more)
skills/cognitive-html-effectiveness/tests/: conftest.py  test_data_table_accordion.py  test_html_generation.py  test_manifest_validation.py  test_palette_resolution.py  test_template_loading.py
(+48 files in other folders)
